@@ -34,7 +34,7 @@ m4_define([[__sl_funcname]], [[$1]])
 m4_define([[__sl_breaktype]], [[$2]])
 m4_step([[__sl_dispcount]])
 m4_define([[__sl_thparms]],"m4_join([[" "]],m4_shiftn(2,$@))")
-m4_esyscmd(m4_quote(PYTHON SPP_PY pppalpha fundef m4_sh_escape(__sl_funcname) __sl_dispcount __sl_thparms))
+m4_esyscmd(m4_quote(PYTHON SPP_PY ppp2alpha fundef m4_sh_escape(__sl_funcname) __sl_dispcount __sl_thparms))
 m4_assert(m4_sysval == 0)
 ]])
 m4_define([[sl_enddef]],[[
@@ -64,9 +64,7 @@ m4_define([[sl_seta]],[[m4_expand([[__sl_seta_]]m4_normalize([[$1]])[[([[$2]])]]
 m4_define([[sl_initarg]],[[ m4_dnl
 [[$4]] __sl_after_[[$5]]; m4_dnl
 m4_define([[__sl_geta_$5]],[[__sl_after_[[]]m4_normalize([[$5]])]]) m4_dnl
-m4_define([[__sl_seta_$5]],[[__sl_after_[[]]m4_normalize([[$5]]) = $[[]]1]]) m4_dnl
 ]])
-
 
 m4_define([[sl_create]], [[m4_dnl
 m4_ifdef([[_sl_increate]],[[m4_fatal(cannot nest create)]])m4_dnl
@@ -79,40 +77,23 @@ m4_define([[_sl_limit]],m4_ifblank([[$4]],1,[[$4]]))m4_dnl
 m4_define([[_sl_step]],m4_ifblank([[$5]],1,[[$5]]))m4_dnl
 m4_define([[_sl_block]],m4_ifblank([[$6]],0,[[$6]]))m4_dnl
 m4_define([[__sl_crbrktype]],"[[$7]]")m4_dnl
-m4_define([[__sl_crfuncname]],[[$8]])m4_dnl
+m4_define([[__sl_crfuncname]], [[$8]])m4_dnl
 m4_define([[_sl_thargs]],m4_dquote(m4_shiftn(8,$@)))m4_dnl
 m4_foreach([[_sl_arg]],m4_quote(_sl_thargs),[[m4_apply([[sl_initarg]],m4_split(_sl_arg,:))]]) m4_dnl
+register long __sl_syncvar_[[]]__sl_tag; m4_dnl
+register void* const __sl_funcptr_[[]]__sl_tag = (void*)([[$8]]);  m4_dnl
 m4_define([[__sl_thargs2]], m4_mapall_sep([[m4_sh_escape]],[[ ]], m4_dquote(m4_shiftn(8, $@))))
-m4_esyscmd(m4_quote(PYTHON SPP_PY pppalpha create m4_sh_escape(__sl_crfuncname) __sl_tag __sl_crbrktype __sl_thargs2))
+m4_esyscmd(m4_quote(PYTHON SPP_PY ppp2alpha create m4_sh_escape(__sl_crfuncname) __sl_tag __sl_crbrktype __sl_thargs2))
 m4_assert(m4_sysval == 0)
 m4_ifblank([[$1]],,[[([[$1]]) = __sl_fid_[[]]__sl_tag;]])
 ]])
 
-m4_define([[__sl_makewreg]],[["=rf"([[$1]])]])
-m4_define([[__sl_makerreg]],[["rf"([[$1]])]])
-
-m4_define([[sl_copyarg]],[[m4_dnl
-__sl_after_[[$5]] = __sl_arg_[[$5]]; m4_dnl
-m4_popdef([[__sl_geta_$5]]) m4_dnl
-m4_popdef([[__sl_seta_$5]]) m4_dnl
-]])
-
 m4_define([[sl_sync]],[[ m4_dnl
 m4_ifndef([[_sl_increate]],[[m4_fatal(sync without create)]]) m4_dnl
-m4_ifblank([[$1]],[[ m4_dnl
-m4_define([[__sl_syncsrc]],[[%__sl_nrwrites]]) m4_dnl
-m4_define([[__sl_syncdst]],[[$[[]]31]]) m4_dnl
-]],[[ m4_dnl
-m4_define([[__sl_wqueue_sync]], m4_join([[,]], m4_quote(__sl_wqueue_sync), [["=r"([[$1]])]])) m4_dnl
-m4_define([[__sl_syncsrc]],[[%m4_incr(__sl_nrwrites)]]) m4_dnl
-m4_define([[__sl_syncdst]],[[%__sl_nrwrites]]) m4_dnl
-]]) m4_dnl
-m4_define([[__sl_rqueue_sync]], 
-m4_join([[,]], [["r"(__sl_sync_[[]]__sl_tag), "r"(__sl_arg___fptr[[]]__sl_tag)]], __sl_rqueue_sync)) m4_dnl
-__asm__ __volatile__("bis __sl_syncsrc, $[[]]31, __sl_syncdst # SYNC __sl_tag" m4_dnl
-: __sl_wqueue_sync m4_dnl
-: __sl_rqueue_sync : "memory"); m4_dnl
-m4_foreach([[_sl_arg]],m4_quote(_sl_thargs),[[m4_apply([[sl_copyarg]],m4_split(_sl_arg,:))]]) m4_dnl
+m4_pushdef([[__sl_syncdst]],[[$1]]) m4_dnl
+__sl_atsync m4_dnl
+m4_popdef([[__sl_syncdst]]) m4_dnl
+m4_popdef([[__sl_atsync]]) m4_dnl
 m4_undefine([[_sl_increate]]) m4_dnl
 ]])
 
